updated arduino install .sh

--- a/wpa_supplicant.conf
+++ b/wpa_supplicant.conf
@@ -5,7 +5,8 @@ ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
 
 country=IE 
-# uncomment following lines with network settings 
+# uncomment following lines with network settings
+# prefered networks can be accessed by setting priority
 #network={
 #    ssid="enter network"
 #    key_mgmt=NONE # Use for no password 
